--- a/index.html
+++ b/index.html
@@ -66,14 +66,30 @@
                 <p>Credit Cards</p>
                 <p>Gift Cards</p>
                 <p>Gift ideas</p>
-                <p>More >
-                </h4>
+                <button class="more">
+                    <a>More</a>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" xml:space="preserve" aria-hidden="true" role="img" class="v-p-top-xxs" fill="white" height="18" width="16"><path d="M12 16c-.15 0-.31-.05-.44-.14l-6.25-4.5a.751.751 0 1 1 .88-1.22L12 14.33l5.81-4.19a.76.76 0 0 1 1.05.17c.24.34.17.8-.17 1.05l-6.25 4.5c-.13.09-.29.14-.44.14z"></path></svg>
+                </button>
+                
             </div>
             <div class="second">
-                <p>Account</p>
-                <p>Recently Viewed</p>
-                <p>Order Status</p>
-                <p>Saved items</p>
+                <button class="account">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" xml:space="preserve"><path d="M16 .76C7.6.76.76 7.6.76 16S7.6 31.24 16 31.24 31.24 24.4 31.24 16 24.4.76 16 .76zm10.23 23.7V23.2c0-2.6-1.14-5.06-3.12-6.75a.98.98 0 1 0-1.27 1.5 6.9 6.9 0 0 1 2.44 5.25v3.19a13.21 13.21 0 0 1-16.56 0V23.2a6.94 6.94 0 0 1 4.76-6.55A5.86 5.86 0 1 0 16 6.1a5.88 5.88 0 0 0-4.96 9 8.92 8.92 0 0 0-5.27 8.1v1.26A13.3 13.3 0 0 1 16 2.71a13.3 13.3 0 0 1 10.23 21.76zm-14.15-12.5a3.92 3.92 0 0 1 7.84 0 3.92 3.92 0 0 1-7.84 0z"></path></svg>
+                    <a>Account</a>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" xml:space="preserve" aria-hidden="true" role="img" class="v-p-top-xxs" fill="white" height="18" width="16"><path d="M12 16c-.15 0-.31-.05-.44-.14l-6.25-4.5a.751.751 0 1 1 .88-1.22L12 14.33l5.81-4.19a.76.76 0 0 1 1.05.17c.24.34.17.8-.17 1.05l-6.25 4.5c-.13.09-.29.14-.44.14z"></path></svg>
+                </button>
+                <button class="recent">
+                    <a>Recently Viewed</a>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" xml:space="preserve" aria-hidden="true" role="img" class="v-p-top-xxs" fill="white" height="18" width="16"><path d="M12 16c-.15 0-.31-.05-.44-.14l-6.25-4.5a.751.751 0 1 1 .88-1.22L12 14.33l5.81-4.19a.76.76 0 0 1 1.05.17c.24.34.17.8-.17 1.05l-6.25 4.5c-.13.09-.29.14-.44.14z"></path></svg>
+                </button>
+                <button class="order">
+                    <a>Order Status</a>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" xml:space="preserve" aria-hidden="true" role="img" class="v-p-top-xxs" fill="white" height="18" width="16"><path d="M12 16c-.15 0-.31-.05-.44-.14l-6.25-4.5a.751.751 0 1 1 .88-1.22L12 14.33l5.81-4.19a.76.76 0 0 1 1.05.17c.24.34.17.8-.17 1.05l-6.25 4.5c-.13.09-.29.14-.44.14z"></path></svg>
+                </button>
+                <button class="saved">
+                    <a>Saved items</a>
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" xml:space="preserve" aria-hidden="true" role="img" class="v-p-top-xxs" fill="white" height="18" width="16"><path d="M12 16c-.15 0-.31-.05-.44-.14l-6.25-4.5a.751.751 0 1 1 .88-1.22L12 14.33l5.81-4.19a.76.76 0 0 1 1.05.17c.24.34.17.8-.17 1.05l-6.25 4.5c-.13.09-.29.14-.44.14z"></path></svg>
+                </button>
             </div>
         </div>
     </bottom-nav>
