--- a/cart.html
+++ b/cart.html
@@ -93,6 +93,13 @@
             </div>
         </div>
     </bottom-nav>
+    <section>
+        <!-- need to add code latter  -->
+        hello
+    </section>
+    <footer>
+        hello
+    </footer>
     <script src="./cart.js"></script>
 </body>
 </html>
