--- a/index.html
+++ b/index.html
@@ -95,12 +95,13 @@
             </div>
         </bottom-nav>
     </div>
-    <section>
-        <!-- need to add code latter  -->
-        hello
-    </section>
+    <middle-section>
+        <div class="middle">
+
+        </div>
+    </middle-section>
     <footer>
-        hello
+        <div class="bottom">footer</div>
     </footer>
 </body>
 </html>
