--- a/index.html
+++ b/index.html
@@ -97,7 +97,23 @@
     </div>
     <middle-section>
         <div class="middle">
-
+            <div class="offer">
+                <div class="sunday">
+                    <h4 class="end">Ends Sunday.</h4>
+                    <h1 class="sale">3-Day sale</h1>
+                    <h4 class="friday">Featuring Black Friday Deals right now.</h4>
+                </div>
+                <div class="shop">
+                    <p class="plus">Also, My Best Buy Plus™ and My Best Buy Total™ members get more Black Friday Deals.</p>
+                    <p class="limit">Limited quantities. No rainchecks.
+                        See <a href="https://www.bestbuy.com/site/help-topics/best-buy-holiday-faqs/pcmcat748300621076.c?id=pcmcat748300621076">Black Friday FAQs.</a></p>
+                    <button class="now">Shop Now</button>
+                </div>
+            </div>
+            <p>Shop deals by category</p>
+            <div class="products">
+                
+            </div>
         </div>
     </middle-section>
     <footer>
