--- a/index.html
+++ b/index.html
@@ -67,11 +67,12 @@
                     <p>Credit Cards</p>
                     <p>Gift Cards</p>
                     <p>Gift ideas</p>
+                </div>
+                <div class="morebutton">
                     <button class="more">
                         <a>More</a>
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" xml:space="preserve" aria-hidden="true" role="img" class="v-p-top-xxs" fill="white" height="18" width="16"><path d="M12 16c-.15 0-.31-.05-.44-.14l-6.25-4.5a.751.751 0 1 1 .88-1.22L12 14.33l5.81-4.19a.76.76 0 0 1 1.05.17c.24.34.17.8-.17 1.05l-6.25 4.5c-.13.09-.29.14-.44.14z"></path></svg>
                     </button>
-                    
                 </div>
                 <div class="second">
                     <button class="account">
