--- a/index.html
+++ b/index.html
@@ -84,27 +84,225 @@
             </div>
         </bottom-nav>
     </div>
-    <middle-section>
-        <div class="middle">
+    <div class="section">
+        <div id="middle">
             <div class="offer">
                 <div class="sunday">
-                    <h4 class="end">Ends Sunday.</h4>
-                    <h1 class="sale">3-Day sale</h1>
-                    <h4 class="friday">Featuring Black Friday Deals right now.</h4>
+                    <div class="end">
+                        <h4 >Ends Sunday.</h4>
+                    </div>
+                    <div class="sale">
+                        <h1>3-Day sale</h1>
+                    </div>
+                    <div class="friday">
+                        <h4>Featuring Black Friday Deals right now.</h4>
+                    </div>
                 </div>
                 <div class="shop">
-                    <p class="plus">Also, My Best Buy Plus™ and My Best Buy Total™ members get more Black Friday Deals.</p>
-                    <p class="limit">Limited quantities. No rainchecks.
-                        See <a href="https://www.bestbuy.com/site/help-topics/best-buy-holiday-faqs/pcmcat748300621076.c?id=pcmcat748300621076">Black Friday FAQs.</a></p>
-                    <button class="now">Shop Now</button>
+                    <div class="faq">
+                        <p class="plus">Also, My Best Buy Plus™ and My Best Buy Total™ members get more Black Friday Deals.</p>
+                        <p>Limited quantities. No rainchecks.See <a href="https://www.bestbuy.com/site/help-topics/best-buy-holiday-faqs/pcmcat748300621076.c?id=pcmcat748300621076">Black Friday FAQs.</a></p>
+                    </div>
+                    <div class="shopnow">
+                        <button class="shopnow-btn">Shop Now</button>
+                    </div>
                 </div>
             </div>
-            <p>Shop deals by category</p>
-            <div class="products">
-                
+        </div>
+        <div class="products">
+            <div class="deals">
+                <p>Shop deals by category</p>
+            </div>
+            <div class="category">
+                <div class="sub">
+                    <div class="level1">
+                        <div class="circle-container">
+                            <div class="circle">
+                                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/ghp-img-icons-laptop-7d08a055-6252-465a-9535-2f1182410434.jpg;maxHeight=370;maxWidth=370" alt="">
+                            </div>
+                            <div class="text-outside">
+                                <a href="#">Laptops & Computers</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="level1">
+                        <div class="circle-container">
+                            <div class="circle">
+                                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/ghp-img-icons-laptop-7d08a055-6252-465a-9535-2f1182410434.jpg;maxHeight=370;maxWidth=370" alt="">
+                            </div>
+                            <div class="text-outside">
+                                <a href="#">Laptops & Computers</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="level1">
+                        <div class="circle-container">
+                            <div class="circle">
+                                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/ghp-img-icons-laptop-7d08a055-6252-465a-9535-2f1182410434.jpg;maxHeight=370;maxWidth=370" alt="">
+                            </div>
+                            <div class="text-outside">
+                                <a href="#">Laptops & Computers</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="level1">
+                        <div class="circle-container">
+                            <div class="circle">
+                                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/ghp-img-icons-laptop-7d08a055-6252-465a-9535-2f1182410434.jpg;maxHeight=370;maxWidth=370" alt="">
+                            </div>
+                            <div class="text-outside">
+                                <a href="#">Laptops & Computers</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="level1">
+                        <div class="circle-container">
+                            <div class="circle">
+                                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/ghp-img-icons-laptop-7d08a055-6252-465a-9535-2f1182410434.jpg;maxHeight=370;maxWidth=370" alt="">
+                            </div>
+                            <div class="text-outside">
+                                <a href="#">Laptops & Computers</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="level1">
+                        <div class="circle-container">
+                            <div class="circle">
+                                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/ghp-img-icons-laptop-7d08a055-6252-465a-9535-2f1182410434.jpg;maxHeight=370;maxWidth=370" alt="">
+                            </div>
+                            <div class="text-outside">
+                                <a href="#">Laptops & Computers</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="sub">
+                    <div class="level1">
+                        <div class="circle-container">
+                            <div class="circle">
+                                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/ghp-img-icons-laptop-7d08a055-6252-465a-9535-2f1182410434.jpg;maxHeight=370;maxWidth=370" alt="">
+                            </div>
+                            <div class="text-outside">
+                                <a href="#">Laptops & Computers</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="level1">
+                        <div class="circle-container">
+                            <div class="circle">
+                                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/ghp-img-icons-laptop-7d08a055-6252-465a-9535-2f1182410434.jpg;maxHeight=370;maxWidth=370" alt="">
+                            </div>
+                            <div class="text-outside">
+                                <a href="#">Laptops & Computers</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="level1">
+                        <div class="circle-container">
+                            <div class="circle">
+                                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/ghp-img-icons-laptop-7d08a055-6252-465a-9535-2f1182410434.jpg;maxHeight=370;maxWidth=370" alt="">
+                            </div>
+                            <div class="text-outside">
+                                <a href="#">Laptops & Computers</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="level1">
+                        <div class="circle-container">
+                            <div class="circle">
+                                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/ghp-img-icons-laptop-7d08a055-6252-465a-9535-2f1182410434.jpg;maxHeight=370;maxWidth=370" alt="">
+                            </div>
+                            <div class="text-outside">
+                                <a href="#">Laptops & Computers</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="level1">
+                        <div class="circle-container">
+                            <div class="circle">
+                                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/ghp-img-icons-laptop-7d08a055-6252-465a-9535-2f1182410434.jpg;maxHeight=370;maxWidth=370" alt="">
+                            </div>
+                            <div class="text-outside">
+                                <a href="#">Laptops & Computers</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="level1">
+                        <div class="circle-container">
+                            <div class="circle">
+                                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/ghp-img-icons-laptop-7d08a055-6252-465a-9535-2f1182410434.jpg;maxHeight=370;maxWidth=370" alt="">
+                            </div>
+                            <div class="text-outside">
+                                <a href="#">Laptops & Computers</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="sub">
+                    <div class="level1">
+                        <div class="circle-container">
+                            <div class="circle">
+                                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/ghp-img-icons-laptop-7d08a055-6252-465a-9535-2f1182410434.jpg;maxHeight=370;maxWidth=370" alt="">
+                            </div>
+                            <div class="text-outside">
+                                <a href="#">Laptops & Computers</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="level1">
+                        <div class="circle-container">
+                            <div class="circle">
+                                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/ghp-img-icons-laptop-7d08a055-6252-465a-9535-2f1182410434.jpg;maxHeight=370;maxWidth=370" alt="">
+                            </div>
+                            <div class="text-outside">
+                                <a href="#">Laptops & Computers</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="level1">
+                        <div class="circle-container">
+                            <div class="circle">
+                                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/ghp-img-icons-laptop-7d08a055-6252-465a-9535-2f1182410434.jpg;maxHeight=370;maxWidth=370" alt="">
+                            </div>
+                            <div class="text-outside">
+                                <a href="#">Laptops & Computers</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="level1">
+                        <div class="circle-container">
+                            <div class="circle">
+                                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/ghp-img-icons-laptop-7d08a055-6252-465a-9535-2f1182410434.jpg;maxHeight=370;maxWidth=370" alt="">
+                            </div>
+                            <div class="text-outside">
+                                <a href="#">Laptops & Computers</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="level1">
+                        <div class="circle-container">
+                            <div class="circle">
+                                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/ghp-img-icons-laptop-7d08a055-6252-465a-9535-2f1182410434.jpg;maxHeight=370;maxWidth=370" alt="">
+                            </div>
+                            <div class="text-outside">
+                                <a href="#">Laptops & Computers</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="level1">
+                        <div class="circle-container">
+                            <div class="circle">
+                                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/ghp-img-icons-laptop-7d08a055-6252-465a-9535-2f1182410434.jpg;maxHeight=370;maxWidth=370" alt="">
+                            </div>
+                            <div class="text-outside">
+                                <a href="#">Laptops & Computers</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </middle-section>
+    </div>
     <footer>
         <div class="bottom">footer</div>
     </footer>
