--- a/index.html
+++ b/index.html
@@ -308,11 +308,59 @@
             <div class="icon-nav">
                 <div class="icon-nav-cant">
                     <div class="icon-logo">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" xml:space="preserve"><path d="M16.04.73C7.64.73.8 7.57.8 15.97s6.84 15.25 15.24 15.25c8.41 0 15.25-6.84 15.25-15.25 0-8.4-6.84-15.24-15.25-15.24zm0 28.53a13.3 13.3 0 0 1 0-26.58 13.3 13.3 0 0 1 0 26.58zm1.41-5.38a1.45 1.45 0 1 1-2.9 0 1.45 1.45 0 0 1 2.9 0zm3.73-12.56c0 2.3-1.47 3.5-2.65 4.48-.94.77-1.5 1.28-1.5 1.98v1.96a.98.98 0 0 1-1.96 0v-1.96c0-1.66 1.17-2.63 2.21-3.49 1.05-.86 1.95-1.6 1.95-2.97 0-.03-.04-3.05-3.19-3.05-3.06 0-3.38 3.1-3.4 3.24a.98.98 0 1 1-1.95-.18c.17-1.74 1.5-5.02 5.35-5.02 3.77 0 5.14 3 5.14 5z"></path></svg>                    </div>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" xml:space="preserve"><path d="M16.04.73C7.64.73.8 7.57.8 15.97s6.84 15.25 15.24 15.25c8.41 0 15.25-6.84 15.25-15.25 0-8.4-6.84-15.24-15.25-15.24zm0 28.53a13.3 13.3 0 0 1 0-26.58 13.3 13.3 0 0 1 0 26.58zm1.41-5.38a1.45 1.45 0 1 1-2.9 0 1.45 1.45 0 0 1 2.9 0zm3.73-12.56c0 2.3-1.47 3.5-2.65 4.48-.94.77-1.5 1.28-1.5 1.98v1.96a.98.98 0 0 1-1.96 0v-1.96c0-1.66 1.17-2.63 2.21-3.49 1.05-.86 1.95-1.6 1.95-2.97 0-.03-.04-3.05-3.19-3.05-3.06 0-3.38 3.1-3.4 3.24a.98.98 0 1 1-1.95-.18c.17-1.74 1.5-5.02 5.35-5.02 3.77 0 5.14 3 5.14 5z"></path></svg>
+                    </div>
                     <a href="">Visit our Support Center</a>
                 </div>
+                <div class="icon-nav-cant">
+                    <div class="icon-logo">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" xml:space="preserve"><path d="M30 9.43a.92.92 0 0 1-.36-.07L16 4.07 2.36 9.36a1 1 0 0 1-1.29-.57.99.99 0 0 1 .57-1.29l13.64-5.29c.46-.18.98-.18 1.45 0L30.36 7.5A1 1 0 0 1 30 9.43z"></path><path d="M16 30a.98.98 0 0 1-.41-.09l-6.24-2.77a1 1 0 0 1-.51-1.32 1 1 0 0 1 1.32-.51l5.84 2.6 13-5.77V9.92L16.38 15.1a1 1 0 0 1-.76 0L3 9.92v12.22l2.93 1.3a1 1 0 0 1 .51 1.32 1 1 0 0 1-1.32.51L1.59 23.7a1 1 0 0 1-.59-.91V8.43a1 1 0 0 1 .44-.83c.28-.19.63-.22.94-.1L16 13.09 29.62 7.5c.31-.13.66-.09.94.09.27.19.44.5.44.84v14.36c0 .4-.23.75-.59.91l-14 6.21A.98.98 0 0 1 16 30z"></path><path d="M16 29.53a1 1 0 0 1-1-1V14.17c0-.55.45-1 1-1s1 .45 1 1v14.36a1 1 0 0 1-1 1z"></path><path d="M23.54 19.48a1 1 0 0 1-1-1v-6.49L8.83 6.85a1 1 0 0 1 .7-1.88l14.36 5.38a1 1 0 0 1 .65.94v7.18a1 1 0 0 1-1 1.01z"></path></svg>                    </div>
+                    <a href="">Check Your Order Status</a>
+                </div>
+                <div class="icon-nav-cant">
+                    <div class="icon-logo">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" xml:space="preserve"><path d="M29.55 17.25h-.52l-2.56-5.2a.98.98 0 0 0-.88-.55h-4.05V4.77a.98.98 0 0 0-.97-.98H4.03a.98.98 0 0 0-.98.98v2.15a.98.98 0 0 0 1.95 0V5.75h14.6v11.48H5v-.5a.98.98 0 0 0-1.95 0v5.67a2.43 2.43 0 0 0 2.43 2.43h.8a3.53 3.53 0 0 0 7.04 0h8.93a3.53 3.53 0 0 0 7.05 0h.25c1.35 0 2.45-1.1 2.45-2.45V19.7c0-1.35-1.1-2.45-2.45-2.45zm-19.75 9a1.58 1.58 0 1 1 0-3.17 1.58 1.58 0 0 1 0 3.17zm15.97 0a1.58 1.58 0 1 1 0-3.17 1.58 1.58 0 0 1 0 3.17zm4.28-3.87a.5.5 0 0 1-.5.5h-.74a3.52 3.52 0 0 0-6.06 0h-9.92a3.53 3.53 0 0 0-3.03-1.75c-1.3 0-2.42.7-3.03 1.74h-1.3A.47.47 0 0 1 5 22.4v-3.21h15.58l.1.01c.54 0 .97-.44.97-.98v-4.76H25l2.55 5.2a1 1 0 0 0 .88.54h1.13c.27 0 .5.22.5.5v2.68z"></path><path d="M8.98 13.44a.98.98 0 0 0-.98-.97l-7.02.01a.98.98 0 0 0 0 1.96L8 14.42c.54 0 .98-.44.98-.98zM4 11.15h4a.98.98 0 0 0 0-1.96H4a.98.98 0 0 0 0 1.96z"></path></svg>                    </div>
+                    <a href="">Shipping, Delivery & Store Pickup</a>
+                </div>
+                <div class="icon-nav-cant">
+                    <div class="icon-logo">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" xml:space="preserve"><path d="M13.54 14.45h5.12a.98.98 0 0 0 0-1.95h-5.12a.98.98 0 0 0 0 1.95z"></path><path d="M24.36 8.59H7.84a.98.98 0 0 0-.97.98V22.1c0 .54.43.97.97.97h16.52c.54 0 .98-.43.98-.97V9.57a.98.98 0 0 0-.98-.98zm-.98 12.53H8.82V10.54h14.56v10.58z"></path><path d="m31.16 4.57-2.95-2.95A.98.98 0 1 0 26.83 3l1.28 1.28H11.94a.98.98 0 0 0 0 1.95H28.1l-1.28 1.29A.98.98 0 0 0 28.2 8.9l2.95-2.95a.98.98 0 0 0 0-1.38zM18.48 25.4H3.93l1.28-1.28a.98.98 0 1 0-1.38-1.38L.88 25.69a.98.98 0 0 0 0 1.38l2.95 2.95a.97.97 0 0 0 1.38 0c.39-.38.39-1 0-1.38l-1.28-1.29h14.55a.98.98 0 1 0 0-1.95z"></path></svg>                    </div>
+                    <a href="">Returns & Exchanges</a>
+                </div>
             </div>
-            <div></div>
+            <div class="important">
+                <div class="links">
+                    <div class="sub-links">
+                        <div class="order">
+                            <h4>Order & Purchases</h4>
+                            <a href="#">Check Order Status</a>
+                            <a href="#">Shipping, Delivery & Pickup</a>
+                            <a href="#">Returns & Exchanges</a>
+                            <a href="#">Price Match Guarantee</a>
+                            <a href="#">Product Recalls</a>
+                            <a href="#">Trade-in Program</a>
+                            <a href="#">Gift Cards</a>
+                        </div>
+                        <div class="support">
+                            <h4>Support & Services</h4>
+                            <a href="#">Visit our Support Center</a>
+                            <a href="#">Shop with an Expert</a>
+                            <a href="#">Schedule a service</a>
+                            <a href="#"></a>
+                            <a href="#"></a>
+                            <a href="#"></a>
+                            <a href="#"></a>
+                        </div>
+                        <div></div>
+                    </div>
+                    <div class="sub-links">
+
+                    </div>
+                </div>
+                <div class="enqoury">
+
+                </div>
+            </div>
             <div></div>
             <div></div>
         </footer>
